--- a/src/css/App.css
+++ b/src/css/App.css
@@ -79,7 +79,7 @@
   background: red;
   height: 100px;
   opacity: 1;
-  transition: all 2s ease;
+  transition: all 1s ease;
 }
 
 .square.square-entering {
@@ -112,14 +112,29 @@
   transform: translateX(-100%);
 }
 
-.square-enter {
+.square-enter-active {
   background: orange;
 }
 
-.square-exit {
+.square-exit-active {
   background: green;
 }
 /*=======================================
                 TRANSITIONS GROUP 
 ========================================*/
+.item {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: all 500ms ease-in;
+}
 
+.item.active,
+.item-enter.item-enter-active {
+  opacity: 1;
+  transform: translateX(0%);
+}
+
+.item-exit.item-exit-active {
+  opacity: 0;
+  transform: translateX(-100%);
+}
